Fixed z-index issue

--- a/src/components/Billboard/style.css
+++ b/src/components/Billboard/style.css
@@ -30,7 +30,7 @@
 .pfpContent {
     position: absolute;
     inset: 10px;
-    z-index: 3;
+    z-index: 2;
 }
 .profilePicture {
     position: absolute;
