--- a/src/components/Navbar/style.css
+++ b/src/components/Navbar/style.css
@@ -3,7 +3,7 @@ nav.navbar {
     position:fixed;
     width:100%;
     top: 0px;
-    z-index: 2;
+    z-index: 10;
     background-color: rgb(238,255,251);
     padding: 0px;
     margin: 0px;
